SDL: added GLES3 support

--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -46,9 +46,13 @@ NeedDepthBuffer=n
 # Enable OpenGL stencil buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
 NeedStencilBuffer=n
 
-# Try to use GLES 2.x context - will revert to GLES 1.X if unsupported by device
+# Use GLES 2.x context
 # you need this option only if you're developing 3-d app (y) or (n)
-NeedGles2=y
+NeedGles2=n
+
+# Use GLES 3.x context
+# you need this option only if you're developing 3-d app (y) or (n)
+NeedGles3=y
 
 # Use glshim library for provide OpenGL 1.x functionality to OpenGL ES accelerated cards (y) or (n)
 UseGlshim=
@@ -253,7 +257,7 @@ CompiledLibraries="sdl_image freetype glu"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-O2 -flto'
+AppCflags='-O2 -flto -isystem jni/application/src/src/src/base/android'
 
 # Aditional C++-specific compiler flags for application, added after AppCflags
 AppCppflags=''
@@ -265,7 +269,7 @@ AppLdflags='-lEGL -flto'
 AppOverlapsSystemHeaders=n
 
 # Build only following subdirs (empty will build all dirs, ignored with custom script)
-AppSubdirsBuild='src/src src/src/base/system.c src/src/engine src/src/engine/client src/src/engine/shared src/src/engine/external/pnglite src/src/engine/external/wavpack src/src/engine/external/json-parser src/src/game src/src/game/client/* src/src/game/editor src/src/game/generated/protocol.cpp src/src/game/generated/client_data.cpp'
+AppSubdirsBuild='src/src src/src/base/android src/src/base/system.c src/src/engine src/src/engine/client src/src/engine/shared src/src/engine/external/pnglite src/src/engine/external/wavpack src/src/engine/external/json-parser src/src/game src/src/game/client/* src/src/game/editor src/src/game/generated/protocol.cpp src/src/game/generated/client_data.cpp'
 
 # Exclude these files from build
 AppBuildExclude=''
