updated basiliskii config and script

--- a/project/jni/application/basiliskii/AndroidAppSettings.cfg
+++ b/project/jni/application/basiliskii/AndroidAppSettings.cfg
@@ -72,6 +72,7 @@ CompatibilityHacksStaticInit=n
 
 # On-screen Android soft text input emulates hardware keyboard, this will only work with Hackers Keyboard app (y)/(n)
 CompatibilityHacksTextInputEmulatesHwKeyboard=y
+TextInputKeyboard=1
 
 # Hack for broken devices: prevent audio chopping, by sleeping a bit after pushing each audio chunk (y)/(n)
 CompatibilityHacksPreventAudioChopping=n
@@ -103,7 +104,7 @@ AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
 
 # Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
-GenerateSubframeTouchEvents=
+GenerateSubframeTouchEvents=y
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=y
@@ -170,7 +171,7 @@ RedefinedKeysScreenKbNames="RCTRL SPACE F12"
 # 1 = Simple Theme by Beholder (white, with gamepad joystick)
 # 2 = Sun by Sirea (yellow, with round joystick)
 # 3 = Keen by Gerstrong (multicolor, with round joystick)
-TouchscreenKeysTheme=2
+TouchscreenKeysTheme=1
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
