--- a/project/jni/glshim/CMakeLists.txt
+++ b/project/jni/glshim/CMakeLists.txt
@@ -12,6 +12,8 @@ option(PANDORA "Set to ON if targeting an OpenPandora device" ${PANDORA})
 option(BCMHOST "Set to ON if targeting an RPi(2) device" ${BCMHOST})
 option(ODROID "Set to ON if targeting an ODroid device" ${ODROID})
 
+option(USE_DRAWTEX "Set to ON to use the glDrawTexiOES extension" ${USE_DRAWTEX})
+
 # Raspberry PI
 if(BCMHOST)
     include_directories(/opt/vc/include /opt/vc/include/interface/vcos/pthreads /opt/vc/include/interface/vmcs_host/linux)
@@ -22,14 +24,19 @@ endif()
 if(PANDORA)
     add_definitions(-DPANDORA)
     add_definitions(-DTEXSTREAM)
+    add_definitions(-mcpu=cortex-a8 -mfpu=neon -mfloat-abi=softfp -ftree-vectorize -fsingle-precision-constant -ffast-math)
 endif()
 
 if(ODROID)
     add_definitions(-DODROID)
 endif()
 
+if(USE_DRAWTEX)
+    add_definitions(-DUSE_DRAWTEX)
+endif()
+
 link_directories(${CMAKE_BINARY_DIR}/lib)
-add_definitions(-g -std=gnu99 -funwind-tables -O3)
+add_definitions(-g -std=gnu99 -funwind-tables -O3 -fvisibility=hidden)
 
 include_directories(include)
 add_subdirectory(src)
