Ninslash: fixed compilation

--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Ninslash"
 AppFullName=ninslash.com
 
 # Application version code (integer)
-AppVersionCode=01600
+AppVersionCode=01800
 
 # Application user-visible version name (string)
-AppVersionName="0.1.6.00"
+AppVersionName="0.1.8.00"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -257,10 +257,10 @@ CompiledLibraries="sdl_image freetype glu"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-O2 -flto -isystem jni/application/src/src/src/base/android'
+AppCflags='-O2 -flto -Werror=format -isystem jni/application/src/src/src/base/android'
 
 # Aditional C++-specific compiler flags for application, added after AppCflags
-AppCppflags=''
+AppCppflags='-std=c++11'
 
 # Additional LDFLAGS for application
 AppLdflags='-lEGL -flto'
