SDL: fixed service notification text color

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -67,7 +67,7 @@ SdlVideoResizeKeepAspect=n
 InhibitSuspend=n
 
 # Create Android service, so the app is less likely to be killed while in background
-CreateService=
+CreateService=y
 
 # Application does not call SDL_Flip() or SDL_UpdateRects() appropriately, or draws from non-main thread -
 # enabling the compatibility mode will force screen update every 100 milliseconds, which is laggy and inefficient (y) or (n)
