Ninslash: bump version

--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -10,7 +10,7 @@ AppFullName=ninslash.com
 AppVersionCode=01800
 
 # Application user-visible version name (string)
-AppVersionName="0.1.8.00"
+AppVersionName="0.1.8.00 pre-alpha nightly unstable debugkeys"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -145,14 +145,14 @@ AppNeedsArrowKeys=n
 FloatingScreenJoystick=n
 
 # Application needs text input (y) or (n), enables button for text input on screen
-AppNeedsTextInput=y
+AppNeedsTextInput=n
 
 # Application uses joystick (y) or (n), the on-screen DPAD will be used as joystick 0 axes 0-1
 # This will disable AppNeedsArrowKeys option
-AppUsesJoystick=y
+AppUsesJoystick=n
 
 # Application uses second on-screen joystick, as SDL joystick 0 axes 2-3 (y)/(n)
-AppUsesSecondJoystick=y
+AppUsesSecondJoystick=n
 
 # Application uses third on-screen joystick, as SDL joystick 0 axes 20-21 (y)/(n)
 AppUsesThirdJoystick=n
@@ -200,7 +200,7 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP"
 
 # Number of virtual keyboard keys (currently 6 is maximum)
-AppTouchscreenKeyboardKeysAmount=3
+AppTouchscreenKeyboardKeysAmount=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
 RedefinedKeysScreenKb="PAGEDOWN SPACE TAB"
