Ninslash: use GLES2 instead of GLES3

--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Ninslash"
 AppFullName=ninslash.com
 
 # Application version code (integer)
-AppVersionCode=01800
+AppVersionCode=01801
 
 # Application user-visible version name (string)
-AppVersionName="0.1.8.00 pre-alpha nightly unstable debugkeys"
+AppVersionName="0.1.8.01 unstable pre-alpha early access"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -48,11 +48,11 @@ NeedStencilBuffer=n
 
 # Use GLES 2.x context
 # you need this option only if you're developing 3-d app (y) or (n)
-NeedGles2=n
+NeedGles2=y
 
 # Use GLES 3.x context
 # you need this option only if you're developing 3-d app (y) or (n)
-NeedGles3=y
+NeedGles3=n
 
 # Use glshim library for provide OpenGL 1.x functionality to OpenGL ES accelerated cards (y) or (n)
 UseGlshim=
