Ninslash: bump version

--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Ninslash"
 AppFullName=ninslash.com
 
 # Application version code (integer)
-AppVersionCode=01801
+AppVersionCode=01804
 
 # Application user-visible version name (string)
-AppVersionName="0.1.8.01 unstable pre-alpha early access"
+AppVersionName="0.1.8.04 pre-alpha early access"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -21,7 +21,7 @@ AppVersionName="0.1.8.01 unstable pre-alpha early access"
 AppDataDownloadUrl="!!Game data|data.zip"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
 DeleteFilesOnUpgrade="libsdl-DownloadFinished-0.flag"
@@ -149,10 +149,10 @@ AppNeedsTextInput=n
 
 # Application uses joystick (y) or (n), the on-screen DPAD will be used as joystick 0 axes 0-1
 # This will disable AppNeedsArrowKeys option
-AppUsesJoystick=n
+AppUsesJoystick=y
 
 # Application uses second on-screen joystick, as SDL joystick 0 axes 2-3 (y)/(n)
-AppUsesSecondJoystick=n
+AppUsesSecondJoystick=y
 
 # Application uses third on-screen joystick, as SDL joystick 0 axes 20-21 (y)/(n)
 AppUsesThirdJoystick=n
