Ninslash: update build scripts

--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Ninslash"
 AppFullName=ninslash.com
 
 # Application version code (integer)
-AppVersionCode=01804
+AppVersionCode=01805
 
 # Application user-visible version name (string)
-AppVersionName="0.1.8.04 pre-alpha early access"
+AppVersionName="0.1.8.05 pre-alpha early access"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -257,13 +257,13 @@ CompiledLibraries="sdl_image freetype glu"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-O2 -flto -Werror=format -isystem jni/application/src/src/src/base/android'
+AppCflags='-O2 -Werror=format -isystem jni/application/src/src/src/base/android' # -flto
 
 # Aditional C++-specific compiler flags for application, added after AppCflags
 AppCppflags='-std=c++11'
 
 # Additional LDFLAGS for application
-AppLdflags='-lEGL -flto'
+AppLdflags='-lEGL' # -flto
 
 # If application has headers with the same name as system headers, this option tries to fix compiler flags to make it compilable
 AppOverlapsSystemHeaders=n
