SDL: added APP_PLATFORM option to the AndroidAppSettings.cfg

--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -244,6 +244,12 @@ AppMinimumRAM=0
 # GCC version, or 'clang' for CLANG
 NDK_TOOLCHAIN_VERSION=clang
 
+# Android platform version.
+# android-9 = Android 2.3, the earliest supported version.
+# android-18 = Android 4.3, the first version supporting GLES3.
+# android-21 = Android 5.1, the first version with SO_REUSEPORT defined.
+APP_PLATFORM=android-21
+
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a x86 mips arm64-v8a
 MultiABI='armeabi-v7a'
