SDL: OUYA icon and manifest, for that one user who still got an OUYA in his living room and won't throw it away just because someone else decides that it's dead

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /project/themes/converter
 /project/jni/android-support
 /project/res/drawable/banner.png
+/project/res/drawable-xhdpi/ouya_icon.png
