SDL: clang will use LLVM c++_static standard C++ library

--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="SuperTux"
 AppFullName=org.lethargik.supertux2
 
 # Application version code (integer)
-AppVersionCode=04016
+AppVersionCode=05016
 
 # Application user-visible version name (string)
-AppVersionName="0.4.0.16"
+AppVersionName="0.5.0.16"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -46,9 +46,13 @@ NeedDepthBuffer=n
 # Enable OpenGL stencil buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
 NeedStencilBuffer=n
 
-# Try to use GLES 2.x context - will revert to GLES 1.X if unsupported by device
+# Use GLES 2.x context
 # you need this option only if you're developing 3-d app (y) or (n)
 NeedGles2=n
+
+# Use GLES 3.x context
+# you need this option only if you're developing 3-d app (y) or (n)
+NeedGles3=
 
 # Use glshim library for provide OpenGL 1.x functionality to OpenGL ES accelerated cards (y) or (n)
 UseGlshim=
@@ -240,6 +244,12 @@ AppMinimumRAM=0
 # GCC version, or 'clang' for CLANG
 NDK_TOOLCHAIN_VERSION=clang
 
+# Android platform version.
+# android-9 = Android 2.3, the earliest supported version.
+# android-18 = Android 4.3, the first version supporting GLES3.
+# android-21 = Android 5.1, the first version with SO_REUSEPORT defined.
+APP_PLATFORM=
+
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a x86 mips arm64-v8a
 MultiABI='armeabi-v7a x86 arm64-v8a'
@@ -247,25 +257,25 @@ MultiABI='armeabi-v7a x86 arm64-v8a'
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
 # Available libraries: mad (GPL-ed!) sdl_mixer sdl_image sdl_ttf sdl_net sdl_blitpool sdl_gfx sdl_sound intl xml2 lua jpeg png ogg flac tremor vorbis freetype xerces curl theora fluidsynth lzma lzo2 mikmod openal timidity zzip bzip2 yaml-cpp python boost_date_time boost_filesystem boost_iostreams boost_program_options boost_regex boost_signals boost_system boost_thread glu avcodec avdevice avfilter avformat avresample avutil swscale swresample bzip2 
-CompiledLibraries="sdl_image physfs crypto ssl curl openal vorbis ogg"
+CompiledLibraries="sdl_image crypto ssl curl openal vorbis ogg"
 
 # Application uses custom build script AndroidBuild.sh instead of Android.mk (y) or (n)
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -frtti -fexceptions -DHAVE_SDL=1' # -flto
+AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -frtti -fexceptions -DHAVE_SDL=1 -flto'
 
 # Aditional C++-specific compiler flags for application, added after AppCflags
 AppCppflags='-std=gnu++11'
 
 # Additional LDFLAGS for application
-AppLdflags='-frtti -fexceptions' # -flto -fuse-ld=gold
+AppLdflags='-frtti -fexceptions -flto'
 
 # If application has headers with the same name as system headers, this option tries to fix compiler flags to make it compilable
 AppOverlapsSystemHeaders=n
 
 # Build only following subdirs (empty will build all dirs, ignored with custom script)
-AppSubdirsBuild='. supertux/src/* supertux/external/findlocale supertux/external/obstack supertux/external/squirrel/include supertux/external/squirrel/squirrel supertux/external/squirrel/sqstdlib supertux/external/tinygettext/include supertux/external/tinygettext/src/*'
+AppSubdirsBuild='. supertux/src/* supertux/external/findlocale supertux/external/obstack supertux/external/squirrel/include supertux/external/squirrel/squirrel supertux/external/squirrel/sqstdlib supertux/external/tinygettext/include supertux/external/tinygettext/src supertux/external/sexp-cpp/include supertux/external/sexp-cpp/src supertux/external/physfs/src'
 
 # Exclude these files from build
 AppBuildExclude='supertux/external/findlocale/example.c supertux/src/video/sdl/sdl_lightmap.cpp supertux/src/video/sdl/sdl_painter.cpp supertux/src/video/sdl/sdl_renderer.cpp supertux/src/video/sdl/sdl_texture.cpp supertux/src/video/sdl/sdl_video_system.cpp supertux/src/control/game_controller_manager.cpp supertux/src/control/joystick_manager.cpp'
