--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -263,13 +263,13 @@ CompiledLibraries="sdl_image crypto ssl curl openal vorbis ogg"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -frtti -fexceptions -DHAVE_SDL=1 -flto'
+AppCflags='-DGL_VERSION_ES_CM_1_0=1 -Ijni/openal/include/AL -Ijni/boost/include -frtti -fexceptions -DHAVE_SDL=1' # -flto crashes the linker
 
 # Aditional C++-specific compiler flags for application, added after AppCflags
 AppCppflags='-std=gnu++11'
 
 # Additional LDFLAGS for application
-AppLdflags='-frtti -fexceptions -flto'
+AppLdflags='-frtti -fexceptions' #  -flto -fuse-ld=gold # -flto crashes the linker
 
 # If application has headers with the same name as system headers, this option tries to fix compiler flags to make it compilable
 AppOverlapsSystemHeaders=n
