--- a/project/jni/application/ninslash/AndroidAppSettings.cfg
+++ b/project/jni/application/ninslash/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Ninslash"
 AppFullName=ninslash.com
 
 # Application version code (integer)
-AppVersionCode=01909
+AppVersionCode=01910
 
 # Application user-visible version name (string)
-AppVersionName="0.1.9.09 pre-alpha early access"
+AppVersionName="0.1.9.10 pre-alpha early access"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -155,7 +155,7 @@ AppUsesJoystick=y
 AppUsesSecondJoystick=y
 
 # Application uses third on-screen joystick, as SDL joystick 0 axes 20-21 (y)/(n)
-AppUsesThirdJoystick=n
+AppUsesThirdJoystick=y
 
 # Application uses accelerometer (y) or (n), the accelerometer will be used as joystick 1 axes 0-1 and 5-7
 AppUsesAccelerometer=n
@@ -203,10 +203,10 @@ RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP"
 AppTouchscreenKeyboardKeysAmount=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="PAGEDOWN SPACE TAB"
+RedefinedKeysScreenKb="TAB"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="Next_weapon Jump Show_scores"
+RedefinedKeysScreenKbNames="Show_scores"
 
 # On-screen keys theme
 # 0 = Ultimate Droid by Sean Stieber (green, with cross joystick)
